<resources>
    <string name="app_name">BookMySeat</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="bookmyseat">BookMySeat</string>
    <string name="or">OR</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="title_activity_home_">Home_Activity</string>
    <string name="movies">Movies</string>
    <string name="Theaters">Theaters</string>
    <string name="About">About</string>
    <string name="home">home</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="location">location</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="phone_no">Phone no</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">search</string>

    <string-array name="movie_name">
        <item>bahubali</item>
        <item>ek tha tigger</item>
        <item>conjuring</item>
    </string-array>

    <string-array name="movie_descp">
        <item>tollywood movie</item>
        <item>bollywood movie</item>
        <item>hollywood movie</item>
    </string-array>


    <string-array name="locations">
        <item>Mumbai</item>
        <item>Delhi</item>
        <item>guj</item>
    </string-array>
</resources>
